# ServerRest_API

./: README.md  ServerRest.postman_collection.json  ServerRest.postman_environment.json  base.resource  pyproject.toml
.github/workflows/: blank.yml
newman/: ServerRest-2025-10-04-19-21-00-672-0.html  ServerRest.postman_collection.json  ServerRest.postman_environment.json
results/: log.html  output.xml  report.html
test_api/test/: login.robot  user.robot
